[package]
name = "trailer"
version = "0.1.1"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
description = "Store a type with an associated buffer in contiguous memory"
license = "MIT"
repository = "https://github.com/Geal/trailer"
readme = "README.md"
documentation = "https://docs.rs/trailer"
keywords = ["buffer"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
